--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,13 @@
         "ext-swoole": ">=2.1.0",
         "psr/log": "^1.0|^2.0|^3.0",
         "psr/http-message": "^1.0",
-        "psr/http-server-handler": "^1.0"
+        "psr/http-server-handler": "^1.0",
+        "symfony/psr-http-message-bridge": "^2.0",
+        "nyholm/psr7": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.5|^9.0",
         "eaglewu/swoole-ide-helper": "dev-master",
-        "symfony/psr-http-message-bridge": "^1.0|^2.0",
         "symfony/http-kernel": "^4.0|^5.0|^6.0",
         "zendframework/zend-diactoros": "^1.7|^2.0",
         "illuminate/contracts": "^5.6|^6.0|^7.0|^8.0"
