--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "psr/http-message": "^1.0",
         "psr/http-server-handler": "^1.0",
         "symfony/psr-http-message-bridge": "^2.0",
+        "laminas/laminas-diactoros": "^2.0",
         "nyholm/psr7": "^1.0"
     },
     "require-dev": {
